--- a/creatorship-project/src/components/Header.css
+++ b/creatorship-project/src/components/Header.css
@@ -31,6 +31,11 @@
     border: none;
     cursor: pointer;
   }
+
+  .auth-buttons .login{
+    background-color: white;
+    color: black;
+  }
   
   .auth-buttons .signup {
     background-color: #ff7e1b;
