--- a/creatorship-project/src/profile/Register.css
+++ b/creatorship-project/src/profile/Register.css
@@ -489,12 +489,12 @@ body {
 @media (min-width: 640px) {
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
-    width: 100%;
+    /* width: 100%; */
   }
 
   .lg\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
-    width: 100%;
+    width: 98.7vw;
     height: 100%;
   }
 
