--- a/creatorship-project/src/index.css
+++ b/creatorship-project/src/index.css
@@ -1,6 +1,6 @@
-/* *{
-  width: 100%;
-} */
+*{
+  width: 98.7vw;
+}
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
