--- a/creatorship-project/src/profile/BusinessDetails.css
+++ b/creatorship-project/src/profile/BusinessDetails.css
@@ -3,10 +3,10 @@
 } */
 
 .container {
-  min-width: 98.7vw;
-  max-width: 900px;
+  /* min-width: 98.7vw;
+  max-width: 900px; */
   margin: 0 auto;
-  padding: 15% 5%;
+  padding: 20px;
 }
 
 .title {
