--- a/creatorship-project/src/profile/BusinessDetails.css
+++ b/creatorship-project/src/profile/BusinessDetails.css
@@ -3,8 +3,8 @@
 } */
 
 .container {
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     width: 98.7vw;
     margin: 0 auto;
     padding: 20px;
