--- a/creatorship-project/src/profile/EquityRequest.css
+++ b/creatorship-project/src/profile/EquityRequest.css
@@ -1,7 +1,7 @@
 .container {
-    min-width: 700px;
-    margin: 0 auto;
-    padding: 20px;
+  width: 98.7vw;
+  margin: 0 auto;
+  padding: 20px;
   }
   
   .title {
