--- a/creatorship-project/src/components/MainSection.css
+++ b/creatorship-project/src/components/MainSection.css
@@ -3,7 +3,7 @@
 .main-section {
   display: flex;
   justify-content: space-around;
-  width: 100%;
+  width: 98.7vw;
   height: 85vh;
   margin: 0;
   padding: 2rem;
