--- a/creatorship-project/src/profile/ContactForm.css
+++ b/creatorship-project/src/profile/ContactForm.css
@@ -3,6 +3,7 @@
     /* flex-direction: row; */
     /* justify-content: space-between; */
     align-items: center;
+    color: #080808;
 }
 
 .main-cont2 {
