--- a/creatorship-project/src/profile/BusinessForm.css
+++ b/creatorship-project/src/profile/BusinessForm.css
@@ -10,34 +10,36 @@
   padding: 0;
 }
 
-body {
+.body-form {
   /* position: relative;
   display: flex;
   justify-content: space-around; */
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #f5f5f5;
+  background-color: #8284f1;
   line-height: 1.6;
   color: #333;
 }
 
 .content-wrapper {
   /* max-width: 800px; */
-  width: 98.7vw;
+  /* width: 98.7vw; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 3rem auto;
-  padding: 2rem;
-  background: #c2c1c1;
+  margin: 2rem auto;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 1rem;
+  background: #e3e3edde;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .image-content1 img{
-  height: 35rem;
-  width: 80%;
-  margin-left: 100px;
+  height: 30rem;
+  width: 100%;
+  /* margin-left: 100px; */
   border-radius: 10px;
 }
 
@@ -50,8 +52,8 @@ body {
 
 .card-body {
   padding: 0;
-  width: 65%;
-  margin-left: 180px;
+  width: 30rem;
+  /* margin-left: 180px; */
 }
 
 .card-title {
