--- a/creatorship-project/src/profile/Register.css
+++ b/creatorship-project/src/profile/Register.css
@@ -496,6 +496,7 @@ body {
     grid-template-columns: repeat(2, minmax(0, 1fr));
     width: 98.7vw;
     height: 100%;
+    padding-bottom: 0.1px;
   }
 
   .gap-x-8 {
@@ -520,7 +521,7 @@ body {
   }
 
   .lg\:py-24 {
-    padding-top: 6rem;
+    padding-top: 2rem;
     padding-bottom: 6rem;
   }
 }
